saveposition works
