# jobfinder-exercise-ui/src/app/core/api/v1/api/api.ts
@@ -1,3 +1,5 @@
 export * from './client.service';
 import { ClientService } from './client.service';
-export const APIS = [ClientService];
+export * from './position.service';
+import { PositionService } from './position.service';
+export const APIS = [ClientService, PositionService];
